Fixed icon and dd overflow in repository tab

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -917,6 +917,6 @@ table.list #pay-link{
   overflow: auto;
 }
 
-html>body .tabular p{
+html>body .tabular p, table.list, .table-list{
   overflow: unset;
 }
